<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitiesAndFrags.InfoFrag">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnOpenSrc"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".1"
                android:contentDescription="@string/open_search"
                android:src="@drawable/search" />

            <TextView
                android:id="@+id/txtPlaceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/place_name"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btnOpenFav"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".1"
                android:contentDescription="@string/open_favorites"
                android:src="@drawable/favorites" />

        </LinearLayout>

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.MaterialRatingBar.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:scaleX=".5"
            android:scaleY=".5" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btnWeb"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/website"
                        android:src="@drawable/web" />

                    <ImageView
                        android:id="@+id/btnFav"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/add_to_favorites"
                        android:src="@drawable/heartg" />

                    <ImageView
                        android:id="@+id/btnCall"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/call"
                        android:src="@drawable/call" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/place_photo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/address"
                    android:inputType="none"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/website"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtWeb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/website"
                    android:inputType="none"
                    android:textColor="#29ABE2"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tel"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/telephone"
                    android:inputType="none"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/opening_hours"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/openHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/hours"
                    android:textSize="15sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>