<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#51ffffff"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight=".25"
            android:contentDescription="@string/icon" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPlaceName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:hint="@string/place_name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:hint="@string/address"
                android:textAlignment="center"
                android:textSize="18sp" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:clickable="false"
                android:longClickable="false"
                android:scaleX=".5"
                android:scaleY=".5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight=".25"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDst"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/dist"
                android:textAlignment="center"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDstM"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtDstT"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/km"
                android:textAlignment="center"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/btnFav"
                android:layout_width="20dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/add_to_favorites"
                android:src="@drawable/heartg" />
        </LinearLayout>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>